--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -1245,11 +1245,12 @@
         mode: '0755'
       tags: create_opp_crontab_dir
     - name: create opp-crontab
-
+      become: yes
+      become_user: logreader
       ansible.builtin.copy:
         src: /opt/crontab/opp-crontab.txt
         dest: /opt/crontab/opp-crontab.txt
-      tags: create opp_crontab
+      tags: create_opp_crontab
     - name: run opp-crontab
       become: yes
       become_user: logreader
