--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -44,7 +44,7 @@
         create_home: yes
         groups: squid,www-group
         append: yes
-        password: "{{ 'logreader_password' | password_hash('sha512') }}"
+        password: "{{ logreader_password | password_hash('sha512') }}"
       tags: local_create_account_logreader
     - name: local create logreader ssh
       delegate_to: localhost
@@ -518,16 +518,16 @@
         groups: squid
         append: yes
       tags: add_nginx_squid_group
-    - name: create account normaluser
-      ansible.builtin.user:
-        name: normaluser
-        state: present
-        shell: /bin/bash
-        create_home: yes
-        groups: squid,www-group
-        append: yes
-        password: "{{ normaluser_password | password_hash('sha512') }}"
-      tags: create_account_normaluser
+#    - name: create account normaluser
+#      ansible.builtin.user:
+#        name: normaluser
+#        state: present
+#        shell: /bin/bash
+#        create_home: yes
+#        groups: squid,www-group
+#        append: yes
+#        password: "{{ normaluser_password | password_hash('sha512') }}"
+#      tags: create_account_normaluser
 #    - name: set normaluser key
 #      ansible.builtin.authorized_key:
 #        user: normaluser
@@ -544,14 +544,14 @@
 #          ## Allows normaluser user to sudo without password
 #          normaluser        ALL=(ALL)       NOPASSWD: ALL
 #      tags: normaluser_sudoer_create
-    - name: delete account normaluser
-      become: yes
-      ansible.builtin.user:
-        name: normaluser
-        state: absent
-        remove: yes
-        force: yes
-      tags: delete_account_normaluser
+#    - name: delete account normaluser
+#      become: yes
+#      ansible.builtin.user:
+#        name: normaluser
+#        state: absent
+#        remove: yes
+#        force: yes
+#      tags: delete_account_normaluser
     - name: nginx service start init
       ansible.builtin.systemd:
         name: nginx
