--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -46,6 +46,14 @@
         append: yes
         password: "{{ logreader_password | password_hash('sha512') }}"
       tags: local_create_account_logreader
+    - name: local change account logreader passwd
+      delegate_to: localhost
+      run_once: true
+      become: yes
+      ansible.builtin.user:
+        name: logreader
+        password: "{{ logreader_password | password_hash('sha512') }}"
+      tags: local_change_account_logreader_passwd
     - name: local create logreader ssh
       delegate_to: localhost
       become: yes
