--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -2,6 +2,7 @@
 ### TODO
 ### !!!!!!  check opp squid reload  !!!!!!
 ### !!!!!!  check opp other sudo command  !!!!!!
+### upgrade python to 3.9.20
 ### chown -R normaluser.normaluser /opt/squid_shell
 ### chmod g+w /opt/squid/var/log
 ### chmod g+w /opt/squid/var/log/cache.log
@@ -54,16 +55,16 @@
 #        name: logreader
 #        password: "{{ logreader_password | password_hash('sha512') }}"
 #      tags: local_change_account_logreader_passw
-    - name: local delete account normaluser
-      delegate_to: localhost
-      run_once: true
-      become: yes
-      ansible.builtin.user:
-        name: normaluser
-        state: absent
-        remove: yes
-        force: yes
-      tags: local_delete_account_normaluser
+#    - name: local delete account normaluser
+#      delegate_to: localhost
+#      run_once: true
+#      become: yes
+#      ansible.builtin.user:
+#        name: normaluser
+#        state: absent
+#        remove: yes
+#        force: yes
+#      tags: local_delete_account_normaluser
     - name: local create logreader ssh
       delegate_to: localhost
       become: yes
@@ -1261,7 +1262,6 @@
           ## Allows logreader user to sudo without password
           logreader        ALL=(ALL)       NOPASSWD: ALL
       tags: create_logreader_sudoer
-
     - name: create opp crontab dir
       become: yes
       ansible.builtin.file:
@@ -1284,13 +1284,12 @@
       ansible.builtin.shell:
         cmd: "crontab /opt/crontab/opp-crontab.txt"
       tags: run_opp_crontab
-    - name: delete system opp-crontab
-      become: yes
-      ansible.builtin.file:
-        path: /etc/cron.d/opp-crontab
-        state: absent
-      tags: delete_system_opp_crontab
-
+#    - name: delete system opp-crontab
+#      become: yes
+#      ansible.builtin.file:
+#        path: /etc/cron.d/opp-crontab
+#        state: absent
+#      tags: delete_system_opp_crontab
     - name: download node_exporter-1.8.2.linux-amd64.tar.gz
       get_url:
         url: https://github.com/prometheus/node_exporter/releases/download/v1.8.2/node_exporter-1.8.2.linux-amd64.tar.gz
