--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -3,7 +3,7 @@
 ### !!!!!!  check opp squid reload  !!!!!!
 ### !!!!!!  check opp other sudo command  !!!!!!
 ### upgrade python to 3.9.20
-### chown -R normaluser.normaluser /opt/squid_shell
+### chown -R logreader.logreader /opt/squid_shell
 ### chmod g+w /opt/squid/var/log
 ### chmod g+w /opt/squid/var/log/cache.log
 ### chmod g+w /opt/nginx/html/transproxy_admin
@@ -14,11 +14,11 @@
 ### chmod g+w /opt/nginx/html/transproxy_admin/public/fileData/threat/*.txt
 ### chmod g+w /opt/nginx/html/threat/archive
 ### chmod 644 /etc/logrotate.d/squid
-### create account normaluser
-### run logrote as normaluser
-### run crontab as normaluser
+### create account logreader
+### run logrote as logreader
+### run crontab as logreader
 ### fix logrote issue
-### run ansible-playbook as normaluser
+### run ansible-playbook as logreader
 ### Ansible Vault
 ##############
 ---
@@ -99,6 +99,17 @@
           ## Allows logreader user to sudo without password
           logreader        ALL=(ALL)       NOPASSWD: ALL
       tags: local_create_logreader_sudoer
+    - name: local chown squid_shell
+      delegate_to: localhost
+      become: yes
+      run_once: true
+      ansible.builtin.file:
+        path: /opt/crontab
+        state: directory
+        owner: logreader
+        group: logreader
+        mode: '0755'
+      tags: local_chown_squid_shell
     - name: local create opp crontab dir
       delegate_to: localhost
       become: yes
