--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -169,7 +169,7 @@
       get_url:
         url: https://www.python.org/ftp/python/3.9.20/Python-3.9.20.tgz
         dest: "{{ software_src_path }}/Python-3.9.20.tgz"
-      tags: local_python_3_9_20
+      tags: local_python_3_9_20_download
     - name: local Python-3.9.20 unarchive
       delegate_to: localhost
       become: yes
