--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -413,6 +413,18 @@
         chdir: "{{ software_dest_path }}/Python-3.9.20"
         creates: /usr/local/python-3.9.20
       tags: python_3_9_20_install
+    - name: alternatives python-3.9.20 install
+      delegate_to: localhost
+      become: yes
+      run_once: true
+      shell: alternatives --install /usr/bin/python3 python3 /usr/local/python-3.9.20/bin/python3.9 1
+      tags: alternatives_python_3_9_20_install
+    - name: alternatives python-3.9.20 config
+      delegate_to: localhost
+      become: yes
+      run_once: true
+      shell: alternatives --set python3 /usr/local/python-3.9.20/bin/python3.9
+      tags: alternatives_python_3_9_20_config
 
     - name: add squid account
       ansible.builtin.user:
