--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -423,7 +423,18 @@
       become: yes
       shell: alternatives --set python3 /usr/local/python-3.9.20/bin/python3.9
       tags: alternatives_python_3_9_20_config
-
+    - name: alternatives pip-3.9.20 install
+      become: yes
+      shell: alternatives --install /usr/bin/pip3 pip3 /usr/local/python-3.9.20/bin/pip3 1
+      tags: alternatives_pip3_3_9_20_install
+    - name: alternatives pip-3.9.20 config
+      become: yes
+      shell: alternatives --set pip3 /usr/local/python-3.9.20/bin/pip3
+      tags: alternatives_pip_3_9_20_config
+    - name: old version pip remove
+      become: yes
+      shell: mv
+      tags: old_version_pip_remove
     - name: add squid account
       ansible.builtin.user:
         name: squid
