--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -1388,15 +1388,16 @@
         recurse: yes
       tags: chown_squid_shell
     - name: chmod crontab file attribute
+      become: yes
       file:
         path: "{{ item }}"
         mode: "g+w"
       loop:
         - /opt/squid/var/log/cache.log
-        - /opt/nginx/html/transproxy_admin
-        - /opt/nginx/html/transproxy_admin/storage/logs
-        - /opt/nginx/html/transproxy_admin/storage/temp
-        - /opt/nginx/html/transproxy_admin/public/fileData/threat
+        #- /opt/nginx/html/transproxy_admin
+        #- /opt/nginx/html/transproxy_admin/storage/logs
+        #- /opt/nginx/html/transproxy_admin/storage/temp
+        #- /opt/nginx/html/transproxy_admin/public/fileData/threat
         - /opt/nginx/html/threat/archive
       tags: chmod_crontab_file_attribute
     - name: create opp crontab dir
