--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -1393,11 +1393,11 @@
         path: "{{ item }}"
         mode: "g+w"
       loop:
-        #- /opt/squid/var/log/cache.log
-        #- /opt/nginx/html/transproxy_admin
-        #- /opt/nginx/html/transproxy_admin/storage/logs
+        - /opt/squid/var/log/cache.log
+        - /opt/nginx/html/transproxy_admin
+        - /opt/nginx/html/transproxy_admin/storage/logs
         #- /opt/nginx/html/transproxy_admin/storage/temp
-        #- /opt/nginx/html/transproxy_admin/public/fileData/threat
+        - /opt/nginx/html/transproxy_admin/public/fileData/threat
         - /opt/nginx/html/threat/archive
       tags: chmod_crontab_file_attribute
     - name: create opp crontab dir
