--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -30,8 +30,10 @@
   gather_facts: no
   vars:
     proxy_env:
-      http_proxy: "http://192.168.189.195:8080"
-      https_proxy: "http://192.168.189.195:8080"
+      #http_proxy: "http://192.168.189.195:8080"
+      #https_proxy: "http://192.168.189.195:8080"
+      http_proxy: "http://192.168.152.120:8080"
+      https_proxy: "http://192.168.152.120:8080"
       NO_PROXY: "localhost,127.0.0.1"
     software_src_path: "/usr/opp/download"
     software_dest_path: "/usr/opp/download"
