--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -116,6 +116,17 @@
         mode: '0755'
         recurse: yes
       tags: local_chown_squid_shell
+    - name: local create opp logrotate dir
+      delegate_to: localhost
+      become: yes
+      run_once: true
+      ansible.builtin.file:
+        path: /opt/logrotate
+        state: directory
+        owner: logreader
+        group: logreader
+        mode: '0755'
+      tags: local_create_opp_logrotate_dir
     - name: local create opp crontab dir
       delegate_to: localhost
       become: yes
