--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -127,6 +127,32 @@
         group: logreader
         mode: '0755'
       tags: local_create_opp_logrotate_dir
+    - name: local create opp-logrotate-squid
+      delegate_to: localhost
+      become: yes
+      become_user: logreader
+      run_once: true
+      ansible.builtin.copy:
+        dest: /opt/logrotate/etc/squid
+        content: |
+          su squid squid
+          /opt/squid/var/log/access.log
+          /opt/squid/var/log/cache.log
+          /opt/squid/var/log/access-tianji-blacklist.log{
+          ##    daily
+              dateext
+              dateformat -%Y%m%d
+              rotate 7
+              compress
+              copytruncate   #使用复制截断
+              missingok
+              ifempty
+              nodelaycompress
+              postrotate
+                  /opt/squid/sbin/squid -k reconfigure >/dev/null 2>&1 || true
+              endscript
+          }
+      tags: local_create_opp_logrotate_squid
     - name: local create opp crontab dir
       delegate_to: localhost
       become: yes
