--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -76,7 +76,7 @@
         mode: '0440'
         content: |
           ## Allows logreader user to sudo without password
-          logreader        ALL=(ALL)       NOPASSWD: ALL
+          logreader        ALL=(ALL)       NOPASSWD: /usr/bin/systemctl * nginx, /usr/bin/systemctl * squid, /usr/bin/systemctl * redis, /usr/bin/systemctl * php-fpm, /usr/bin/systemctl * laravel-queue, /usr/bin/systemctl * node_exporter
       tags: local_create_logreader_sudoer
     - name: local chown squid_shell
       delegate_to: localhost
