--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -1344,18 +1344,6 @@
           0 1,13 * * * root /usr/bin/curl -k https://127.0.0.1:8000/api/upredis_dir &>> /opt/squid_shell/logs/php_upredis_dir.log
 
       tags: opp_crontab_create
-    - name: opp sudoer create
-      ansible.builtin.copy:
-        dest: /etc/sudoers.d/opp
-        owner: root
-        group: root
-        mode: '0440'
-        content: |
-          ## Allows nginx user to run OPP commond
-          nginx ALL=(root) NOPASSWD: /usr/bin/python3 /opt/py_prod/squid_ldap_modify.py
-          nginx ALL=(root) NOPASSWD: /usr/bin/python3 /opt/py_prod/squid_kerberos_modify.py
-          nginx ALL=(root) NOPASSWD: /opt/squid/sbin/squid -k reconfigure
-      tags: opp_sudoer_create
     - name: create account logreader
       ansible.builtin.user:
         name: logreader
@@ -1372,16 +1360,15 @@
         state: present
         key: "{{ lookup('file', '~logreader/.ssh/id_rsa.pub') }}"
       tags: set_logreader_key
-    - name: create logreader sudoer
-      ansible.builtin.copy:
-        dest: /etc/sudoers.d/logreader
+    - name: create opp sudoer
+      ansible.builtin.template:
+        src: templates/sudoer-opp.j2
+        dest: /etc/sudoers.d/opp
         owner: root
         group: root
         mode: '0440'
-        content: |
-          ## Allows logreader user to sudo without password
-          logreader        ALL=(ALL)       NOPASSWD: ALL
-      tags: create_logreader_sudoer
+        validate: '/usr/sbin/visudo -cf %s'
+      tags: create_opp_sudoer
     - name: chown squid_shell
       become: yes
       ansible.builtin.file:
