--- a/opp_bak.yml
+++ b/opp_bak.yml
@@ -4,6 +4,8 @@
   gather_facts: no
   vars:
     proxy_env:
+      #http_proxy: "http://192.168.189.195:8080"
+      #https_proxy: "http://192.168.189.195:8080"
       http_proxy: "http://192.168.152.120:8080"
       https_proxy: "http://192.168.152.120:8080"
       NO_PROXY: "localhost,127.0.0.1"
@@ -141,6 +143,14 @@
           ansible.builtin.shell:
             cmd: "crontab /opt/crontab/opp-crontab"
       tags: local_opp_crontab_config
+#    - name: local delete system opp-crontab
+#      delegate_to: localhost
+#      become: yes
+#      run_once: true
+#      ansible.builtin.file:
+#        path: /etc/cron.d/opp-crontab
+#        state: absent
+#      tags: local_delete_system_opp_crontab
     - name: local Python-3.9.20 download
       delegate_to: localhost
       become: yes
@@ -229,11 +239,11 @@
       blockinfile:
         path: /etc/ssh/sshd_config
         block: |
-          # ÂØÜÈí•‰∫§Êç¢ÁÆóÊ≥ïÔºàÁ¶ÅÁî®Âº± DH/SHA-1 ÁÆóÊ≥ïÔºâ
+          # √‹‘øΩªªªÀ„∑®£®Ω˚”√»ı DH/SHA-1 À„∑®£©
           KexAlgorithms curve25519-sha256@libssh.org,ecdh-sha2-nistp256,ecdh-sha2-nistp384,ecdh-sha2-nistp521,diffie-hellman-group-exchange-sha256
-          # Âä†ÂØÜÁÆóÊ≥ïÔºàÁ¶ÅÁî® 3DES„ÄÅCBC Ê®°ÂºèÁ≠âÂº±ÁÆóÊ≥ïÔºâ
+          # º”√‹À„∑®£®Ω˚”√ 3DES°¢CBC ƒ£ Ωµ»»ıÀ„∑®£©
           Ciphers aes256-gcm@openssh.com,aes128-gcm@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
-          # Ê∂àÊÅØËÆ§ËØÅÁ†ÅÁÆóÊ≥ïÔºàÁ¶ÅÁî® SHA-1 Á±ª MACÔºâ
+          # œ˚œ¢»œ÷§¬ÎÀ„∑®£®Ω˚”√ SHA-1 ¿‡ MAC£©
           MACs hmac-sha2-256,hmac-sha2-512,hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com
         marker: "#### {mark} ADDED BY OPP INSTALLATION ####"
         backup: yes
@@ -628,6 +638,40 @@
         groups: squid
         append: yes
       tags: add_nginx_squid_group
+#    - name: create account normaluser
+#      ansible.builtin.user:
+#        name: normaluser
+#        state: present
+#        shell: /bin/bash
+#        create_home: yes
+#        groups: squid,www-group
+#        append: yes
+#        password: "{{ normaluser_password | password_hash('sha512') }}"
+#      tags: create_account_normaluser
+#    - name: set normaluser key
+#      ansible.builtin.authorized_key:
+#        user: normaluser
+#        state: present
+#        key: "{{ lookup('file', '~normaluser/.ssh/id_rsa.pub') }}"
+#      tags: set_normaluser_key
+#    - name: normaluser sudoer create
+#      ansible.builtin.copy:
+#        dest: /etc/sudoers.d/normaluser
+#        owner: root
+#        group: root
+#        mode: '0440'
+#        content: |
+#          ## Allows normaluser user to sudo without password
+#          normaluser        ALL=(ALL)       NOPASSWD: ALL
+#      tags: normaluser_sudoer_create
+#    - name: delete account normaluser
+#      become: yes
+#      ansible.builtin.user:
+#        name: normaluser
+#        state: absent
+#        remove: yes
+#        force: yes
+#      tags: delete_account_normaluser
     - name: nginx service start init
       ansible.builtin.systemd:
         name: nginx
@@ -645,6 +689,26 @@
         groups: www-group
         append: yes
       tags: add_nginx_www_group
+#    - name: nginx-configure
+#      shell: |
+#        ./configure --user=nginx --group=nginx --prefix=/usr/nginx \
+#            --with-cc-opt=-O2 \
+#            --with-http_ssl_module \
+#            --with-http_v2_module \
+#            --with-http_sub_module \
+#            --with-http_stub_status_module \
+#            --with-threads \
+#            --with-compat \
+#            --add-module=../headers-more-nginx-module \
+#            --sbin-path=/usr/nginx/sbin/nginx \
+#            --conf-path=/usr/nginx/conf/nginx.conf \
+#            --with-stream \
+#            --without-pcre2 \
+#            --with-stream_ssl_module \
+#            --with-stream_ssl_preread_module
+#      args:
+#        chdir: "{{ software_dest_path }}/nginx-1.25.5"
+#      tags: nginx_configure
     - name: nginx-configure
       shell: |
         ./configure --user=nginx --group=nginx --prefix=/opt/nginx \
@@ -665,11 +729,41 @@
       args:
         chdir: "{{ software_dest_path }}/nginx-1.25.5"
       tags: nginx_configure
+#    - name: nginx-compile
+#      shell: make && make install
+#      args:
+#        chdir: "{{ software_dest_path }}/nginx-1.25.5"
+#        creates: /usr/nginx
+#      tags: nginx_compile
     - name: nginx-compile
       shell: make && make install
       args:
         chdir: "{{ software_dest_path }}/nginx-1.25.5"
       tags: nginx_compile
+#    - name: nginx service create
+#      ansible.builtin.copy:
+#        dest: /etc/systemd/system/nginx.service
+#        owner: root
+#        group: root
+#        mode: '0644'
+#        content: |
+#          [Unit]
+#          Description=The nginx HTTP and reverse proxy server
+#          After=network.target remote-fs.target nss-lookup.target
+#          
+#          [Service]
+#          Type=forking
+#          PIDFile=/usr/nginx/logs/nginx.pid
+#          ExecStartPre=/usr/nginx/sbin/nginx -t
+#          ExecStart=/usr/nginx/sbin/nginx
+#          ExecReload=/usr/nginx/sbin/nginx -s reload
+#          ExecStop=/bin/kill -s QUIT $MAINPID
+#          PrivateTmp=true
+#          
+#          [Install]
+#          WantedBy=multi-user.target
+#      notify: reload systemd
+#      tags: nginx_service_create
     - name: nginx service create
       ansible.builtin.copy:
         dest: /etc/systemd/system/nginx.service
@@ -796,6 +890,29 @@
         state: started
         enabled: yes
       tags: php_fpm_service_start
+#    - name: download redis-7.4.2
+#      get_url:
+#        url: https://download.redis.io/releases/redis-7.4.2.tar.gz
+#        dest: "{{ software_src_path }}/redis-7.4.2.tar.gz"
+#      delegate_to: localhost
+#      run_once: true
+#      tags: download_redis_7_4_2
+#    - name: copy redis-7.4.2.tar.gz
+#      ansible.builtin.copy:
+#        src: "{{ software_src_path }}/redis-7.4.2.tar.gz"
+#        dest: "{{ software_dest_path }}/redis-7.4.2.tar.gz"
+#      tags: copy_redis
+#    - name: redis-unarchive
+#      unarchive:
+#        src: "{{ software_dest_path }}/redis-7.4.2.tar.gz"
+#        dest: "{{ software_dest_path }}"
+#        remote_src: yes
+#      tags: redis_unarchive
+#    - name: redis server compile
+#      shell: make USE_SYSTEMD=yes && make install
+#      args:
+#        chdir: "{{ software_dest_path }}/redis-7.4.2"
+#      tags: redis_server_compile
     - name: download redis-5.0.3
       get_url:
         url: https://download.redis.io/releases/redis-5.0.3.tar.gz
@@ -893,6 +1010,18 @@
         owner: redis
         group: redis
       tags: copy_redis_config
+#    - name: edit redis config bind
+#      ansible.builtin.replace:
+#        path: /etc/redis.conf
+#        regexp: 'bind 127.0.0.1 -::1'
+#        replace: 'bind 127.0.0.1'
+#      tags: edit_redis_config_bind
+#    - name: edit redis config supervised
+#      ansible.builtin.replace:
+#        path: /etc/redis.conf
+#        regexp: '# supervised auto'
+#        replace: 'supervised systemd'
+#      tags: edit_redis_config_supervised
     - name: edit redis config supervised
       ansible.builtin.replace:
         path: /etc/redis.conf
@@ -989,7 +1118,7 @@
         content: |
           [Unit]
           Description=Laravel Queue Worker
-          After=network.target redis.service  # Ëã•‰æùËµñ RedisÔºåÈúÄÊåáÂÆö
+          After=network.target redis.service  # »Ù“¿¿µ Redis£¨–Ë÷∏∂®
 
           [Service]
           User=nginx
@@ -1003,7 +1132,7 @@
           RestartSec=5
           MemoryLimit=1G
           
-          # ÁéØÂ¢ÉÂèòÈáèÔºàÈáçË¶ÅÔºÅÔºâ
+          # ª∑æ≥±‰¡ø£®÷ÿ“™£°£©
           #Environment="REDIS_HOST=127.0.0.1"
           #Environment="DB_HOST=127.0.0.1"
           #Environment="APP_ENV=production"
@@ -1122,13 +1251,11 @@
         var: squid_status.stdout_lines
       tags: output_squid_status
     - name: copy rsyslog oproxy
-      become: yes
       ansible.builtin.copy:
         src: /etc/rsyslog.d/oproxy_log.conf
         dest: /etc/rsyslog.d/oproxy_log.conf
       tags: copy_rsyslog_oproxy
     - name: edit rsyslog oproxy
-      become: yes
       ansible.builtin.replace:
         path: /etc/rsyslog.d/oproxy_log.conf
         regexp: 'poxappprd52a'
@@ -1141,7 +1268,6 @@
         enabled: yes
       tags: rsyslog_service_restart
     - name: delete stats json
-      become: yes
       ansible.builtin.file:
         path: "{{ item }}"
         state: absent
@@ -1180,14 +1306,12 @@
         password: "{{ 'logreader_password' | password_hash('sha512') }}"
       tags: create_account_logreader
     - name: set logreader key
-      become: yes
       ansible.builtin.authorized_key:
         user: logreader
         state: present
         key: "{{ lookup('file', '~logreader/.ssh/id_rsa.pub') }}"
       tags: set_logreader_key
     - name: create opp sudoer
-      become: yes
       ansible.builtin.template:
         src: templates/sudoer-opp.j2
         dest: /etc/sudoers.d/opp
@@ -1206,55 +1330,6 @@
         mode: '0755'
         recurse: yes
       tags: chown_squid_shell
-
-    - name: local create logrotate dir
-      delegate_to: localhost
-      become: yes
-      run_once: true
-      ansible.builtin.file:
-        path: /opt/logrotate
-        state: directory
-        owner: logreader
-        group: logreader
-        mode: '0755'
-      tags: local_create_logrotate_dir
-    - name: local create logrotate config
-      delegate_to: localhost
-      become: yes
-      become_user: logreader
-      run_once: true
-      block:
-        - name: logrotate sub dir
-          ansible.builtin.file:
-            path: "/opt/logrotate/{{ item }}"
-            state: directory
-          loop:
-            - "etc"
-            - "status"
-        - name: logrotate config squid
-          ansible.builtin.template:
-            src: templates/logrotate_config_squid.j2
-            dest: /opt/logrotate/etc/squid
-          vars:
-            access_log_path: "/opt/squid/var/log/access.log"
-            cache_log_path: "/opt/squid/var/log/cache.log"
-            access_tianji_blacklist_log_path: "/opt/squid/var/log/access-tianji-blacklist.log"
-            squid_path: "/opt/squid"
-        - name: logrotate config nginx
-          ansible.builtin.template:
-            src: templates/logrotate_config_nginx.j2
-            dest: /opt/logrotate/etc/nginx
-          vars:
-            log_path: "/opt/nginx/logs/*.log"
-            nginx_path: "/opt/nginx"
-        - name: logrotate config python_prod_logs
-          ansible.builtin.template:
-            src: templates/logrotate_config_python_prod_logs.j2
-            dest: /opt/logrotate/etc/python_prod_logs
-          vars:
-            log_path: "/opt/py_prod/log/*.log"
-      tags: local_create_logrotate_config
-
     - name: chmod crontab file attribute
       become: yes
       file:
@@ -1291,6 +1366,12 @@
       ansible.builtin.shell:
         cmd: "crontab /opt/crontab/opp-crontab.txt"
       tags: run_opp_crontab
+#    - name: delete system opp-crontab
+#      become: yes
+#      ansible.builtin.file:
+#        path: /etc/cron.d/opp-crontab
+#        state: absent
+#      tags: delete_system_opp_crontab
     - name: download node_exporter-1.8.2.linux-amd64.tar.gz
       get_url:
         url: https://github.com/prometheus/node_exporter/releases/download/v1.8.2/node_exporter-1.8.2.linux-amd64.tar.gz
@@ -1363,7 +1444,6 @@
     - name: check node_exporter status
       shell: curl http://127.0.0.1:9100/metrics
       tags: check_node_exporter_status
-###############################################
     - name: check nginx ssl crt exists
       delegate_to: localhost
       ansible.builtin.stat:
