--- a/ansible/opp.yml
+++ b/ansible/opp.yml
@@ -1206,23 +1206,17 @@
         mode: '0755'
         recurse: yes
       tags: chown_squid_shell
-
-    - name: local create logrotate dir
-      delegate_to: localhost
+    - name: create logrotate dir
       become: yes
-      run_once: true
       ansible.builtin.file:
         path: /opt/logrotate
         state: directory
         owner: logreader
         group: logreader
         mode: '0755'
-      tags: local_create_logrotate_dir
-    - name: local create logrotate config
-      delegate_to: localhost
+      tags: create_logrotate_dir
+    - name: create logrotate config
       become: yes
-      become_user: logreader
-      run_once: true
       block:
         - name: logrotate sub dir
           ansible.builtin.file:
@@ -1253,8 +1247,7 @@
             dest: /opt/logrotate/etc/python_prod_logs
           vars:
             log_path: "/opt/py_prod/log/*.log"
-      tags: local_create_logrotate_config
-
+      tags: create_logrotate_config
     - name: chmod crontab file attribute
       become: yes
       file:
